<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="60dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:id="@+id/welcomeTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/good_morning"
                android:textColor="#1B1B1B"
                android:textSize="22sp" />

            <ImageView
                android:id="@+id/viewBookmarks"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_bookmark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/grey_800" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            android:scrollbars="horizontal">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/home_view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/top_stories"
                android:textColor="@color/grey_700"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/view_all_top_stories"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/view_all"
                android:textColor="#001AFF"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="80dp"
            android:layout_height="2dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/text_line" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="116dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="4dp"
            android:orientation="horizontal">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/top_stories_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="10"
                tools:listitem="@layout/item_round_top_headlines" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3dp"
            android:text="@string/suggested_topics"
            android:textColor="@color/grey_700"
            android:textSize="16sp" />

        <View
            android:layout_width="130dp"
            android:layout_height="2dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/text_line" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/suggested_topics_recycler_view"
            style="@style/fab_action"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3"
            tools:itemCount="6"
            tools:listitem="@layout/item_category_news" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>